Version 0.1.0~dev

	* Initial release
	* Added more exceptions class