@@ -188,9 +188,12 @@ class Importer(ImporterBase):
             f = opener.open(req)
             data_read = f.read()
             if data_read == '': return None
-            data_decoded = cPickle.loads(data_read)
-            cj.save()
-            return data_decoded
+            try:
+                data_decoded = cPickle.loads(data_read)
+                cj.save()
+                return data_decoded
+            except cPickle.UnpicklingError:
+                raise ImporterDeserializeError(data_read, traceback=traceback.format_exc())
         except urllib2.HTTPError, e:
             data_decoded = cPickle.loads(e.read()) # Read exception
             raise ImporterError(data_decoded['msg'], local=False, traceback=data_decoded['traceback'])
