@@ -2,3 +2,4 @@ Version 0.1.0~dev
 
 	* Initial release
 	* Added more exceptions class
+	* Better error handling for UnpicklingError
